<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OO</string>
    <string name="login_remember_password">记住密码</string>
    <string name="auto_login_failed">自动登陆失败</string>
    <string name="account_input_hint">输入账号</string>
    <string name="password_input_hint">输入密码</string>
    <string name="login">登陆</string>
    <string name="goto_register_login">没有账号？点我注册</string>
    <string name="register">注册</string>
    <string name="goto_login_register">去登陆</string>
    <string name="input_re_password_hint">再次输入密码</string>
    <string name="navigation_item_my_collection">我的收藏</string>
    <string name="navigation_logout">退出登陆</string>
    <string name="navigation_my_fans">我的粉丝</string>
    <string name="navigation_my_concern">我的关注</string>
    <string name="dock_forum">论坛</string>
    <string name="dock_message">消息</string>
    <string name="dock_friends">好友</string>
    <string name="dock_new">动态</string>
    <string name="message_send">发送</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="signature">个性签名</string>
    <string name="hometown">家乡</string>
    <string name="save_user_information">保存修改</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="school">学校</string>
    <string name="search_friend_hint">用户名/昵称</string>
    <string name="add_new_hint" tools:ignore="TypographyEllipsis">分享新鲜事...\n\n\n\n\n\n\n\n</string>
    <string name="add_new_post">发表</string>
    <string name="album">相册</string>
    <string name="camera">拍照</string>
    <string name="cancel">取消</string>
</resources>
