<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_login_and_register_bg">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view_main_login"
        android:elevation="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        android:layout_centerVertical="true"
        android:background="@android:color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="30dp"
                android:id="@+id/ll_account_login"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_account_input"
                    android:padding="8dp"
                    android:layout_gravity="center_vertical"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/et_account_login"
                    android:hint="@string/account_input_hint"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textSize="15sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ll_account_login"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/ll_password_login">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_password_input"
                    android:padding="8dp"
                    android:layout_gravity="center_vertical"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_password_login"
                    android:hint="@string/password_input_hint"
                    android:inputType="textPassword"
                    android:maxLength="18"
                    android:singleLine="true"
                    android:textSize="15sp"/>

            </LinearLayout>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch_remember_login"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/ll_password_login"
                app:layout_constraintLeft_toLeftOf="@id/ll_password_login"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_remember_password"
                android:textSize="15sp"
                android:layout_toEndOf="@id/switch_remember_login"
                app:layout_constraintTop_toTopOf="@id/switch_remember_login"
                app:layout_constraintBottom_toBottomOf="@id/switch_remember_login"
                app:layout_constraintLeft_toRightOf="@id/switch_remember_login"
                android:layout_marginStart="15dp"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:id="@+id/btn_login"
                android:text="@string/login"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/switch_remember_login"
                app:layout_constraintLeft_toLeftOf="@id/ll_password_login"
                app:layout_constraintRight_toRightOf="@id/ll_password_login"
                android:background="@drawable/btn_bg"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                app:layout_constraintTop_toBottomOf="@id/btn_login"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_goto_register"
        android:text="@string/goto_register_login"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:layout_below="@id/card_view_main_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_launcher"
        app:civ_circle_background_color="@android:color/white"
        android:layout_above="@id/card_view_main_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-20dp"
        android:elevation="6dp"/>

</RelativeLayout>